feat: added ie helper class

--- a/package.json
+++ b/package.json
@@ -71,5 +71,9 @@
     "type": "git",
     "url": "git://github.com/mozilla/pdf.js.git"
   },
+  "ieAPIUrl": "https://intellectualexplore.com",
+  "localAPIUrl": "http://localhost:8000",
+  "mediaPath": "/v1/api/media/:id/",
+  "queryParamsUsed": "?token=<jwt token>&id=<media id>",
   "license": "Apache-2.0"
 }
